--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="./styles/home.css" />
-    <link rel="stylesheet" href="git ./styles/footer.css">
+    <link rel="stylesheet" href="./styles/footer.css">
   </head>
   <body>
     <!-- header -->
     <header class="main-header">
       <div class="header-strip1">
         <div class="header-logo">
-          <a href="#"><img src="../assets/logo.jpg" alt="logo" /></a>
+          <a href="#"><img src="./assets/logo.jpg" alt="logo" /></a>
         </div>
         <div class="main-navigation">
           <ul class="nav-list">
