cards location updated

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="cards-wrapper">
         <div class="location-cards">
           <div class="location-img">
-            <img src="../assets/card1.jpg" alt="#" />
+            <img src="./assets/card1.jpg" alt="#" />
           </div>
           <div class="location-desc">
             <div class="location-desc-b1">
@@ -135,7 +135,7 @@
         </div>
          <div class="location-cards">
           <div class="location-img">
-            <img src="../assets/card1.jpg" alt="#" />
+            <img src="./assets/card1.jpg" alt="#" />
           </div>
           <div class="location-desc">
             <div class="location-desc-b1">
@@ -165,7 +165,7 @@
         </div>
          <div class="location-cards">
           <div class="location-img">
-            <img src="../assets/card1.jpg" alt="#" />
+            <img src="./assets/card1.jpg" alt="#" />
           </div>
           <div class="location-desc">
             <div class="location-desc-b1">
@@ -195,7 +195,7 @@
         </div>
          <div class="location-cards">
           <div class="location-img">
-            <img src="../assets/card1.jpg" alt="#" />
+            <img src="./assets/card1.jpg" alt="#" />
           </div>
           <div class="location-desc">
             <div class="location-desc-b1">
@@ -225,7 +225,7 @@
         </div>
          <div class="location-cards">
           <div class="location-img">
-            <img src="../assets/card1.jpg" alt="#" />
+            <img src="./assets/card1.jpg" alt="#" />
           </div>
           <div class="location-desc">
             <div class="location-desc-b1">
@@ -255,7 +255,7 @@
         </div>
          <div class="location-cards">
           <div class="location-img">
-            <img src="../assets/card1.jpg" alt="#" />
+            <img src="./assets/card1.jpg" alt="#" />
           </div>
           <div class="location-desc">
             <div class="location-desc-b1">
